@@ -1,6 +1,7 @@
 1.0.6
 - update to HeadPhones-54bbde5
 - update to Sabnzbd-0.7.18
+- Fix XBMC crash on frodo (hopefully for real this time)
 
 1.0.5
 - update to CouchPotatoServer-45b2dff
